# dotFiles

./: .dockerignore  .gitmodules  Dockerfile  Makefile  README.md  Readme.md  Taskfile.yaml  setup.bat  setup.zsh
.github/workflows/: docker.yaml
config/bat/: config
config/k9s/: config.yml
config/nvim/: init.vim
config/tmux/: common.conf  config-inner.tmux  tmux-inner.conf  tmux.conf
config/zsh/plugins/colored-less/: colored-less.plugin.zsh
config/zsh/plugins/drive/: _drive
config/zsh/plugins/zdict/: zdict.plugin.zsh
file/: ghostty.ini  gitconfig  vimrc  vimrc.vim  zshrc  zshrc.zsh
ssh/: config
workspace/: pyproject.toml
