[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Tim's dev utilities"
authors = ["tzing <tzingshih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
httpx = {version = "^0.23.1", extras = ["http2", "cli"]}
tqdm = "^4.64.1"
tabulate = "^0.9.0"
pyyaml = "^6.0"
tomli = "^2.0.1"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.5"
pandas = "^1.5.2"

[tool.poetry.group.repl.dependencies]
ipython = "^8.7.0"
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
