[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Tim's dev utilities"
authors = ["tzing <tzingshih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {version = "^0.23.3", extras = ["http2", "cli"]}
pandas = "^1.5.3"
python-dateutil = "^2.8.2"
pyyaml = "^6.0"
requests = "^2.28.1"
tabulate = "^0.9.0"
tqdm = "^4.64.1"

[tool.poetry.group.laptop.dependencies]
tomli = "^2.0.1"
ipython = "^8.10.0"
jupyterlab = "^3.5.0"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
