[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Tim's dev utilities"
authors = ["tzing <tzingshih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = { version = "*", extras = ["http2", "cli"] }
pandas = "*"
python-dateutil = "*"
pyyaml = "*"
requests = "*"
tabulate = "*"
tqdm = "*"

[tool.poetry.group.laptop.dependencies]
ipython = "*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
